--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
@@ -33,6 +34,7 @@ packaging==25.0
 passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.5.0
+pluggy==1.6.0
 pycodestyle==2.14.0
 pydantic==2.12.4
 pydantic-extra-types==2.10.6
@@ -41,6 +43,7 @@ pydantic_core==2.41.5
 pyflakes==3.4.0
 Pygments==2.19.2
 PyJWT==2.10.1
+pytest==9.0.1
 python-dotenv==1.2.1
 python-multipart==0.0.20
 pytokens==0.3.0
