--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
+aiosmtplib==4.0.2
 alembic==1.17.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.1
 bcrypt==4.0.1
 black==25.11.0
+blinker==1.9.0
 certifi==2025.10.5
+cffi==2.0.0
 click==8.3.0
 colorama==0.4.6
+cryptography==46.0.3
 dnspython==2.8.0
 email-validator==2.3.0
 Faker==38.0.0
 fastapi==0.121.1
+fastapi-cache2==0.2.2
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
+fastapi-mail==1.5.8
 flake8==7.3.0
 greenlet==3.2.4
 h11==0.16.0
@@ -33,9 +40,12 @@ orjson==3.11.4
 packaging==25.0
 passlib==1.7.4
 pathspec==0.12.1
+pendulum==3.1.0
 platformdirs==4.5.0
 pluggy==1.6.0
+psycopg2-binary==2.9.11
 pycodestyle==2.14.0
+pycparser==2.23
 pydantic==2.12.4
 pydantic-extra-types==2.10.6
 pydantic-settings==2.11.0
@@ -44,15 +54,19 @@ pyflakes==3.4.0
 Pygments==2.19.2
 PyJWT==2.10.1
 pytest==9.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.20
 pytokens==0.3.0
 PyYAML==6.0.3
+redis==4.6.0
+regex==2025.11.3
 rich==14.2.0
 rich-toolkit==0.15.1
 rignore==0.7.6
 sentry-sdk==2.43.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
@@ -60,6 +74,7 @@ typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+tzlocal==5.3.1
 ujson==5.11.0
 urllib3==2.5.0
 uvicorn==0.38.0
